syntax = "proto3";

package Users;

import "protobuf/rest/heyas.proto";

option go_package = "github.com/hackathon-21winter-05/HiQidas/model/pb/rest";

// GET /Users ユーザー一覧を取得
message GetUsersResponse {
    repeated string user_id = 1;
}
//POST /users ユーザーの名前をPOST
message PostUsersRequest {
    string name = 1;
}

// GET /users/{userId} ユーザーの詳細情報を取得
message GetUsersUserIdResponse {
    User user = 1;
}

//PUT /users/{userId} ユーザー情報の変更
message EditUsersUserIdRequest {
    // どの情報を変更するか考える
}

// GET /users/me 自分の情報を取得
message GetUsersMeResponse {
    User me = 1;
    repeated string favorite_hiqidashi_id = 2;
}

// PUT /users/me  自分の情報を変更
message EditUsersMeRequest {
    //　どの情報を変更するか考える
}

//GET /users/me/heyas
message GetUserdMeHeyasResponse {
    heya.Heyas hayas = 1;
}

message User {
    string id = 1;
    string name = 2;
    string icon_file_id = 3;
}

message Users {
    repeated User users = 1;
}